# slicer

./: .clang-format  .gitignore  README.md  env.sh
src/: CMakeLists.txt  slicer.cpp
